Fix bug #3481624: this was needlessly complex
svn path=/trunk/netsurf/; revision=13463

--- a/gtk/res/options.glade
+++ b/gtk/res/options.glade
@@ -1955,7 +1955,8 @@ Amazon
 Ebay
 IMDB
 Espn
-Wikipedia</property>
+Wikipedia
+DuckDuckGo</property>
                               </widget>
                               <packing>
                                 <property name="position">2</property>
