Since nsurl wants to add // to url schemes, just abide by it. Third / separates the type and name.
svn path=/trunk/netsurf/; revision=13534

--- a/beos/res/beosdefault.css
+++ b/beos/res/beosdefault.css
@@ -5,7 +5,7 @@
 /* Load base stylesheet. */
 
 /*@import "default.css";*/
-@import "rsrc:/default.css";
+@import "rsrc:///default.css";
 
 /* Apply GTK specific rules. */
 
