--- a/gtk/res/tabcontents.gtk3.ui
+++ b/gtk/res/tabcontents.gtk3.ui
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
+  <object class="GtkAdjustment" id="layoutvadjustment">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="loyouthadjustment">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkGrid" id="tabContents">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -11,6 +21,9 @@
         <property name="visible">True</property>
         <property name="app_paintable">True</property>
         <property name="can_focus">False</property>
+        <property name="events">GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK | GDK_SCROLL_MASK</property>
+        <property name="hadjustment">loyouthadjustment</property>
+        <property name="vadjustment">layoutvadjustment</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -25,6 +38,7 @@
         <property name="can_focus">False</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
+        <property name="adjustment">layoutvadjustment</property>
       </object>
       <packing>
         <property name="left_attach">1</property>
@@ -69,6 +83,7 @@
           <object class="GtkScrollbar" id="hscrollbar">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="adjustment">loyouthadjustment</property>
           </object>
           <packing>
             <property name="resize">True</property>
