--- a/gtk/res/gtkdefault.css
+++ b/gtk/res/gtkdefault.css
@@ -12,7 +12,7 @@ input { font-size: 95%; border: medium inset #ddd; }
 input[type=button], input[type=reset], input[type=submit], button {
 	background-color: #ddd; border: medium outset #ddd; }
 input[type=checkbox], input[type=radio] { font-size: 105%; }
-input[type=file] { background-color: #ddd; border: medium inset #ddd; }
+input[type=file] { background-color: #ddd; border: medium outset #ddd; }
 
 select { background-color: #ddd; border: medium inset #ddd; font-size: 95%; }
 select:after { border-left:4px ridge #ddd; }
